# qobuz-player

./: .gitignore  Cargo.toml  README.md  flake.nix  justfile  rust-toolchain.toml  typos.toml
.github/workflows/: pull-request-linux.yml  pull-request-macos.yml  release-linux-aarch.yml  release-linux.yml  release-macos.yml
.helix/: languages.toml
.sqlx/: query-1c19aa6af1666c250751f606ce4f2f517403677e012abe957573eb4dd46d897c.json  query-1f27c5172f6712b18c4eff83f0aec1e494d628369184acfc435aa80b619ef5a2.json  query-209baf83c8713af786d291874c1722357ed68ea7646dbf35d0005e61522af002.json  query-26fb84a813da028a0eb78a0403751ab7deb516ddedb62f4f8ef6b7140ab6d29c.json  query-270269ba3c86ea7cbfe815f2a81f3ced20af3fe16d52b89d0bc71054453b0562.json  query-28221af2dc5590187b470998b4afe146795f8abee9ff87a2b84c920d03120ebf.json  query-2e56161a4e8cc52d4008909e87dd2b403a858888555cb72ac686f75b704935a3.json  query-33de565830820ba85cb477c1de82275be4c296bce890157e98e34c345a814c13.json  query-3594b9e32adbafe551430c9ef748b57f4ed72f4298695204ed18c1374f91bc5a.json  query-45e4dad0ab7ffd1986a68a3e05e0d8d90ae38c2f26d9f208a21d433d6565499c.json  query-4f528d52c78b3d778e064369fc36af49ddc8c06bdde609f9579eaf2ea709b6e1.json  query-530723639ce2782f02f1bbdfb19c58699ce72ec37f11013e35e933439a88e880.json  query-5ee85b4dd34f1c12cc191dba32983951c27f5f8be590430f3bf07ad9f4bddfda.json  query-682de554897593722ce2a8ff4d0dc9675a0a212077aeea1563a64b7608bee483.json  query-7066477b5c351c0308b623328afb944d8996f455bf991b3039addddfe7f7aa9e.json  query-823e42cefeae8136283f6045d5dfed38d076c0cd725928bf7e022c3b27af52fc.json  query-8e3e9972e6e6a13d96d302c99aa310fd472cc6333fd2276f6513e93138655c12.json  query-9059c56144358fbbbe2fb7b2362ee23bb8a01c4ff713ec659d1a804dd599ebfd.json  query-9f774d979c509bfd350e1bdeb05253c5d7e94d177e753e5471440c455b0203b0.json  query-b5343e80f499af892e1632ff03d0fc58c84187bea1df62a4230f27086cf16b32.json  query-bd8ed8ff55110bba821f0efd32c6b8040931be5172ab7db7e2b9abc7bcb1fd3a.json  query-c69780c568b47597f0119ba085cbdb3dc1aef19dbfff62504c9293d8e97f9b80.json  query-cbbc870025b27e4f20531e2147e255713680f0fe6920474c839296292743a962.json  query-ccb2642624a824721de0d75fede39b8d17362a3d8b66c9e0c0bc7dd1c01c75c5.json  query-d49f877ecf1a86080ef96ec39667b1dd97f57a334d84b8cb71e75eeab2339922.json  query-d4b5c2ddb62623b5a24e092f283a2535c06337f84507e6c5f1341c6348b50d58.json  query-d7238bdc263b70144bf3f2d975f5b9c5c2b14d290c8f00722b5865163325084f.json  query-dbde958e5d7da43863d35891a27de0987259097662ac351eb8992309d081968f.json  query-e459b7c0ab5d635bbfac5992071d067c5b7c7057ea3f992b0992d2dad41acc72.json  query-e7ffa81ad6d99c6fd8b1b2ead35631d29e3672bdc911589fc396c7cc7ea29442.json  query-ee6ef39ccc79ab3050a09b6b51a570f63033aeb2aeecd37b413348ed3c486dcd.json  query-fae9dea5302fc2c874b7ac8aea5275d5f5b32d3eb5f0bba69f539c3504af326d.json  query-fd4ded8adc6876e9ee32a5e4fa27486dc18d7184b0ea9b9713a5461e6d15812d.json
hifirs/: Cargo.toml
hifirs-player/: Cargo.toml
hifirs-player/migrations/: 20250112090716_initial.down.sql
hifirs-player/src/: lib.rs  mpris.rs  notification.rs  service.rs
hifirs-tui/src/: lib.rs
hifirs-web/: Cargo.toml  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts
hifirs-web/assets/: reconnect.js
hifirs-web/src/: assets.rs  lib.rs  page.rs
hifirs/src/: cli.rs  lib.rs  service.rs  websocket.rs
qobuz-api/: Cargo.toml
qobuz-api/src/: lib.rs
qobuz-api/src/client/: album.rs  album_suggestion.rs  api.rs  artist.rs  favorites.rs  mod.rs  release.rs
qobuz-player-cli/: Cargo.toml  Makfile.toml
qobuz-player-cli/migrations/: 20250202110024_remove_cached_properties.down.sql  20250217053153_rename_config_to_credentials.down.sql
qobuz-player-cli/src/: cli.rs  database.rs  lib.rs  main.rs
qobuz-player-client/: Cargo.toml
qobuz-player-client/src/: client.rs  lib.rs
qobuz-player-client/src/qobuz_models/: album.rs  album_suggestion.rs  artist.rs  artist_page.rs  favorites.rs  featured.rs  mod.rs  playlist.rs  release.rs  search_results.rs  track.rs
qobuz-player-controls/: Cargo.toml
qobuz-player-controls/migrations/: 20250201154726_user_id.down.sql  20250922180319_persist_cache_entries.down.sql  20250922180319_persist_cache_entries.up.sql
qobuz-player-controls/src/: broadcast.rs  client.rs  controls.rs  database.rs  error.rs  lib.rs  models.rs  mpris.rs  notification.rs  player.rs  playerstate.rs  qobuz.rs  readonly.rs  service.rs  simple_cache.rs  sink.rs  state.rs  time.rs  timer.rs  tracklist.rs
qobuz-player-controls/src/qobuz/: album.rs  artist.rs  mod.rs  playlist.rs  track.rs
qobuz-player-controls/src/queue/: controls.rs  mod.rs
qobuz-player-controls/src/sql/: db.rs
qobuz-player-database/: Cargo.toml
qobuz-player-database/migrations/: 20250217053237_add_configuration.down.sql  20250301155650_rfid_database.down.sql  20250704171046_persist_tracklist.down.sql
qobuz-player-database/src/: lib.rs
qobuz-player-gpio/: Cargo.toml
qobuz-player-gpio/src/: gpio.rs  lib.rs
qobuz-player-models/: Cargo.toml
qobuz-player-models/src/: lib.rs
qobuz-player-mpris/: Cargo.toml
qobuz-player-mpris/src/: lib.rs
qobuz-player-rfid/: Cargo.toml
qobuz-player-rfid/src/: lib.rs
qobuz-player-state/: Cargo.toml
qobuz-player-state/migrations/: 20250910073714_persist_volume.down.sql
qobuz-player-state/src/: database.rs  lib.rs
qobuz-player-tui/: Cargo.toml
qobuz-player-tui/src/: app.rs  discover.rs  favorites.rs  lib.rs  now_playing.rs  popup.rs  queue.rs  search.rs  ui.rs
qobuz-player-web/: Cargo.toml  package-lock.json  package.json
qobuz-player-web/assets/: manifest.json  script.js  tailwind.css
qobuz-player-web/src/: assets.rs  lib.rs  page.rs  view.rs
qobuz-player-web/src/components/: list.rs  mod.rs
qobuz-player-web/src/icons/: mod.rs
qobuz-player-web/src/routes/: album.rs  artist.rs  auth.rs  controls.rs  discover.rs  favorites.rs  mod.rs  now_playing.rs  playlist.rs  queue.rs  search.rs
www/: .prettierignore  eslint.config.js  package-lock.json  package.json  svelte.config.js  tailwind.config.cjs  tailwind.config.ts
www/src/: app.html
(+71 files in other folders)
