[workspace]
members = [
  "qobuz-player-cli",
  "qobuz-player-controls",
  "qobuz-player-web",
  "qobuz-player-mpris",
  "qobuz-player-tui",
  "qobuz-player-client",
  "qobuz-player-gpio",
  "qobuz-player-rfid",
  "qobuz-player-database",
]
resolver = "2"

[workspace.package]
version = "0.3.2"
edition = "2024"
license-file = "LICENSE"
repository = "https://github.com/sofusa/qobuz-player"

[workspace.metadata.crane]
name = "qobuz-player"

[workspace.dependencies]
axum = "0.8"
axum-extra = { version = "0.10", features = ["cookie"] }
time = "0.3"
base64 = "0.22"
cached = "0.54"
chrono = "0.4"
clap = "4"
dialoguer = "0.11"
dirs = "6"
futures = "0.3"
gstreamer = "0.23"
leptos = "0.8"
md5 = "0.7"
mime = "0.3"
mime_guess = "2"
rand = "0.9"
regex = "1"
reqwest = { version = "0.12", features = ["rustls-tls", "cookies", "stream", "multipart"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
snafu = "0.8"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "migrate", "macros"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2"
