[workspace]
members = [
  "qobuz-player-cli",
  "qobuz-player-controls",
  "qobuz-player-web",
  "qobuz-player-mpris",
  "qobuz-player-tui",
  "qobuz-player-client",
  "qobuz-player-gpio",
  "qobuz-player-rfid",
  "qobuz-player-state",
]
resolver = "2"

[workspace.package]
version = "0.4.0"
edition = "2024"
license-file = "LICENSE"
repository = "https://github.com/sofusa/qobuz-player"

[workspace.metadata.crane]
name = "qobuz-player"

[workspace.dependencies]
axum = { version = "*", features = ["ws"] }
axum-extra = { version = "*", features = ["cookie"] }
time = "*"
base64 = "*"
clap = { version = "*", features = ["derive", "env"] }
rust-embed = { version = "*", features = ["axum", "tokio", "mime_guess"] }
dialoguer = "*"
dirs = "*"
futures = "*"
leptos = { version = "*", features = ["ssr"] }
md5 = "*"
mime = "*"
mime_guess = "*"
rand = "*"
regex = "*"
reqwest = { version = "*", features = ["rustls-tls", "cookies", "stream", "multipart"] }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
snafu = "*"
sqlx = { version = "*", features = ["runtime-tokio-rustls", "sqlite", "migrate", "macros"] }
tokio = { version = "*", features = ["full"] }
tokio-stream = { version = "*", features = ["sync"] }
tracing = "*"
tracing-subscriber = { version = "*", features = ["env-filter"] }
url = "*"
moka = { version = "*", features = ["future"]}
rodio = "*"
