[package]
name = "hifirs-qobuz-api"
version = "0.1.2"
edition = "2021"
license-file = "../LICENSE"
repository = "https://github.com/iamdb/hifi.rs"
description = "An incomplete, async API client for the Qobuz music service."

exclude = [
  "*.snap"
]

[dependencies]
base64 = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true, features = ["derive"] }
md5 = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true, features = ["rustls-tls", "cookies", "stream", "multipart"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
snafu = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
insta = { workspace = true, features = ["yaml", "redactions"] }
