[package]
name = "qobuz-api"

version.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true

[dependencies]
base64 = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true, features = ["derive"] }
md5 = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true, features = ["rustls-tls", "cookies", "stream", "multipart"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
snafu = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

