[package]
name = "qobuz-player"
version.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true

[features]
gpio = ["qobuz-player-gpio/gpio"]

[dependencies]
qobuz-player-client = { version = "*", path = "../qobuz-player-client" }
qobuz-player-controls = { version = "*", path = "../qobuz-player-controls" }
qobuz-player-mpris = { version = "*", path = "../qobuz-player-mpris" }
qobuz-player-web = { version = "*", path = "../qobuz-player-web" }
qobuz-player-tui = { version = "*", path = "../qobuz-player-tui" }
qobuz-player-rfid = { version = "*", path = "../qobuz-player-rfid" }
qobuz-player-gpio = { version = "*", path = "../qobuz-player-gpio", optional = true }

clap = { workspace = true }
snafu = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
ratatui = { workspace = true }
tokio_schedule = { workspace = true }
time = { workspace = true }
