[package]
name = "qobuz-player-client"
version.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true

[dependencies]
base64 = { workspace = true }
chrono = { workspace = true }
md5 = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
snafu = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
