[package]
name = "qobuz-player-controls"

version.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true

[dependencies]
qobuz-player-client = { version = "*", path = "../qobuz-player-client" }

gstreamer = { workspace = true }
cached = { workspace = true } 
futures = { workspace = true }
tokio = { workspace = true }
rand = { workspace = true }
tracing = { workspace = true }
snafu = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
