[package]
name = "qobuz-player-controls"

version.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true

[dependencies]
qobuz-player-client = { version = "*", path = "../qobuz-player-client" }

tokio = { workspace = true }
rand = { workspace = true }
tracing = { workspace = true }
snafu = { workspace = true }
serde = { workspace = true }
moka = { workspace = true }
time = { workspace = true }
rodio = { workspace = true }
reqwest = { workspace = true }
