[package]
name = "qobuz-player-gpio"
version.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true

[features]
gpio = ["rppal"]

[dependencies]
qobuz-player-controls = { version = "*", path = "../qobuz-player-controls" }
qobuz-player-database = { version = "*", path = "../qobuz-player-database" }

tracing = { workspace = true }
tokio = { workspace = true }
rppal = { version = "*", optional = true }
