[package]
name = "qobuz-player-mpris"
version.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true

[dependencies]
qobuz-player-controls = { version = "*", path = "../qobuz-player-controls" }

mpris-server = { git = "https://github.com/SeaDve/mpris-server", features = ["tokio"] }
tokio = { workspace = true }
