[package]
name = "qobuz-player-rfid"
version.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true

[dependencies]
qobuz-player-controls = { version = "*", path = "../qobuz-player-controls" }
qobuz-player-database = { version = "*", path = "../qobuz-player-database" }

tokio = { workspace = true, features = ["full"] }
sqlx = { workspace = true, features = ["runtime-tokio-rustls", "sqlite", "migrate", "macros"] }
tracing = { workspace = true }
dialoguer = { workspace = true }
