[package]
name = "qobuz-player-rfid"
version.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true

[dependencies]
qobuz-player-controls = { version = "*", path = "../qobuz-player-controls" }
qobuz-player-state = { version = "*", path = "../qobuz-player-state" }

tokio = { workspace = true }
dialoguer = { workspace = true }
