[package]
name = "qobuz-player-tui"

version.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true

[dependencies]
qobuz-player-controls = { version = "*", path = "../qobuz-player-controls" }
qobuz-player-state = { version = "*", path = "../qobuz-player-state" }

futures = { workspace = true }
ratatui = "*"
ratatui-image = "*"
tui-input = "*"
image = "*"
reqwest = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
