[package]
name = "qobuz-player-tui"

version.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true

[dependencies]
qobuz-player-controls = { version = "*", path = "../qobuz-player-controls" }

ratatui = { workspace = true }
ratatui-image = "*"
tui-input = "*"
image = "*"
reqwest = { workspace = true }
tokio = { workspace = true }
