[package]
name = "qobuz-player-web"

version.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true

[dependencies]
qobuz-player-controls = { version = "*", path = "../qobuz-player-controls" }

axum = { workspace = true, features = ["ws"] }
futures = { workspace = true }
leptos = { workspace = true, features = ["ssr"] }
mime = { workspace = true }
mime_guess = { workspace = true }
tokio = { workspace = true, features = ["full"] }
rust-embed = { version = "8.5.0", features = ["axum", "tokio", "mime_guess"] }
gstreamer = { workspace = true, features = ["serde", "v1_16"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio-stream = { workspace = true, features = ["sync"] }
tracing = { workspace = true }
