[package]
name = "qobuz-player-web"

version.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true

[dependencies]
qobuz-player-controls = { version = "*", path = "../qobuz-player-controls" }
qobuz-player-rfid = { version = "*", path = "../qobuz-player-rfid" }

axum = { workspace = true, features = ["ws"] }
axum-extra = { workspace = true }
time = { workspace = true }
futures = { workspace = true }
leptos = { workspace = true, features = ["ssr"] }
mime = { workspace = true }
mime_guess = { workspace = true }
tokio = { workspace = true }
rust-embed = { version = "8.7.2", features = ["axum", "tokio", "mime_guess"] }
serde = { workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true }
