[package]
name = "qobuz-player-web"

version.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true

[dependencies]
qobuz-player-controls = { version = "*", path = "../qobuz-player-controls" }
qobuz-player-database = { version = "*", path = "../qobuz-player-database" }
qobuz-player-rfid = { version = "*", path = "../qobuz-player-rfid" }
qobuz-player-models = { version = "*", path = "../qobuz-player-models" }

axum = { workspace = true }
axum-extra = { workspace = true }
time = { workspace = true }
futures = { workspace = true }
leptos = { workspace = true }
mime = { workspace = true }
mime_guess = { workspace = true }
tokio = { workspace = true }
rust-embed = { workspace = true }
serde = { workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true }
